--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,7 @@ if (interactive()) {
 
 The idea for `errorist` came from a conversation among 
 [Dirk Eddelbuettel](http://dirk.eddelbuettel.com), 
-[Barry Rowlingson](http://barry.rowlingson.com), and myself musing about the
+[Barry Rowlingson](http://barry.rowlingson.com), and myself musing about
 having compilers provide a link explaining what the error meant and how to
 solve it. This conversation was sprouted due to the mouse overtext of
 [XKCD Comic 1185: Ineffective Sorts](https://xkcd.com/1185/).
