Improve "Special Thanks" section

--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -100,12 +100,16 @@ for errors that occurred at runtime.
 # Special Thanks
 
 - [Dirk Eddelbuettel](http://dirk.eddelbuettel.com) for starting the discussion
+  on [XKCD Comic 1185: Ineffective Sorts](https://xkcd.com/1185/).
 - [Barry Rowlingson](http://barry.rowlingson.com) for the package name and
   remarks about functionality.
-- [Brodie Gaslam](http://www.brodieg.com/) for advise on warning triggers.
+- [Brodie Gaslam](http://www.brodieg.com/) for pointing out 
+  [`addTaskCallback()`](https://stat.ethz.ch/R-manual/R-devel/library/base/html/taskCallback.html)
+  as a way to create a warning handler.
 - [Joshua Ulrich](http://www.joshuaulrich.com/) for advise on incorporating
-  the semi-documented `last.warning` object populated with warning messages.
-
+  the semi-documented [`last.warning`](https://stat.ethz.ch/R-manual/R-devel/library/base/html/warning.html)
+  object that _R_ populates with warning messages.
+  
 # License
 
 GPL (>= 2)
