--- a/README.Rmd
+++ b/README.Rmd
@@ -33,10 +33,20 @@ second they arise.
 
 ## Installation
 
-The `errorist` package is only available on GitHub for the moment. You can 
-install the `errorist` package with:
+The `errorist` package is available on both CRAN and GitHub. The CRAN
+version is considered stable while the GitHub version is in a state of
+development and may break. You can install the stable version of the
+`errorist` package with:
 
 ```r
+install.packages("errorist")
+```
+
+For the development version, you can opt for:
+
+```r
+install.packages("devtools")
+
 devtools::install_github("coatless/errorist")
 ```
 
