--- a/README.Rmd
+++ b/README.Rmd
@@ -14,12 +14,12 @@ knitr::opts_chunk$set(
 
 # errorist
 
-[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![Travis-CI Build Status](https://travis-ci.org/coatless/errorist.svg?branch=master)](https://travis-ci.org/coatless/errorist)
+<!-- badges: start -->
+[![Travis Build Status](https://travis-ci.com/r-assist/errorist.svg?branch=master)](https://travis-ci.com/r-assist/errorist)
 [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/errorist)](https://cran.r-project.org/package=errorist)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/errorist)](http://www.r-pkg.org/pkg/errorist)
-[![Coverage Status](https://img.shields.io/codecov/c/github/coatless/errorist/master.svg)](https://codecov.io/github/coatless/errorist?branch=master)
-
+[![Coverage Status](https://img.shields.io/codecov/c/github/r-assist/errorist/master.svg)](https://codecov.io/github/r-assist/errorist?branch=master)
+<!-- badges: end -->
 
 >
 > _errorist_: one who holds to and propagates error
